# Calculate-integral-image-using-cuda

./: CMakeLists.txt  README-zh.md  README.md  integral_img.cu  integral_img.cuh  main.cu
helper/: helper_cuda.h  helper_functions.h
